Adjusted to the latest DSL talks (internal/external)